@@ -1,5 +1,10 @@
 ﻿namespace Amica.Models
 {
+    /// <summary>
+    /// Fee information.
+    /// </summary>
+    /// <seealso cref="Amica.Models.BaseModelWithCompanyId" />
+    /// <seealso cref="Amica.Models.IUniqueId" />
     public class Fee : BaseModelWithCompanyId, IUniqueId
     {
         private string _name;
@@ -9,7 +14,9 @@
         /// <summary>
         /// Gets or sets the name.
         /// </summary>
-        /// <value>The name.</value>
+        /// <value>
+        /// The name.
+        /// </value>
         public string Name
         {
             set { SetProperty(ref _name, value); }
@@ -17,15 +24,23 @@
         }
 
         /// <summary>
-        /// Gets or sets wether this is a RiBa method.
+        /// Gets or sets the amount.
         /// </summary>
-        /// <value>The wether this is a RiBa method.</value>
+        /// <value>
+        /// The amount.
+        /// </value>
         public decimal Amount
         {
             set { SetProperty(ref _amount, value); }
             get { return _amount; }
         }
 
+        /// <summary>
+        /// Gets or sets the VAT.
+        /// </summary>
+        /// <value>
+        /// The VAT.
+        /// </value>
         public Vat Vat
         {
             set { SetProperty(ref _vat, value); }
