@@ -2,34 +2,34 @@
 
 namespace Amica.Models
 {
+    /// <summary>
+    /// Payment information.
+    /// </summary>
+    /// <seealso cref="Amica.Models.BaseModelWithCompanyId" />
     public class Payment : BaseModelWithCompanyId
     {
         private string _name;
         private float _discount;
-		// inizio scadenze
         private int _firstPaymentDateAdditionalDays;
-		// periodicità
         private int _installmentsEveryNumberOfDays;
-		// numero di rate
         private int _installments;
-		// scadenze fine mese	
         private bool _forceEndOfMonth;
-		// giorni extra
         private int _extraDays;
-		// giorni esatti
         private bool _exactDays;
 
-        // periodo prima rata
         private FirstPaymentDate _firstPaymentDate;
         private FirstPaymentOption _firstPaymentOption;
         private Bank _bank;
         private Fee _fee;
         private PaymentMethod _paymentMethod;
 
-		public Payment()
+        /// <summary>
+        /// Initializes a new instance of the <see cref="Payment"/> class.
+        /// </summary>
+        public Payment()
         {
             Installments = 1;
-            ForceEndOfMonth = true;
+            ShouldForceToEndOfMonth = true;
             FirstPaymentDateAdditionalDays = 30;
             InstallmentsEveryNumberOfDays = 30;
 			FirstPaymentDate= PaymentHelpers.FirstPaymentDates[PaymentDate.DocumentDate];
@@ -37,86 +37,164 @@ namespace Amica.Models
             PaymentMethod = new PaymentMethod();
         }
 
+        /// <summary>
+        /// Gets or sets the name.
+        /// </summary>
+        /// <value>
+        /// The name.
+        /// </value>
         public string Name
         {
             set { SetProperty(ref _name, value); }
             get { return _name; }
         }
 
+        /// <summary>
+        /// Gets or sets the discount rate.
+        /// </summary>
+        /// <value>
+        /// The discount rate.
+        /// </value>
         public float Discount
         {
             set { SetProperty(ref _discount, value); }
             get { return _discount; }
         }
 
-		[JsonProperty("first_payment_additional_days")]
+        /// <summary>
+        /// Gets or sets additional days to the first payment date.
+        /// </summary>
+        /// <value>
+        /// The additional days to the first payment date.
+        /// </value>
+        [JsonProperty("first_payment_additional_days")]
         public int FirstPaymentDateAdditionalDays
         {
             set { SetProperty(ref _firstPaymentDateAdditionalDays, value); }
             get { return _firstPaymentDateAdditionalDays; }
         }
 
-		[JsonProperty("installments_every_number_of_days")]
+        /// <summary>
+        /// Gets or sets the installments every number of days.
+        /// </summary>
+        /// <value>
+        /// The installments every number of days.
+        /// </value>
+        [JsonProperty("installments_every_number_of_days")]
         public int InstallmentsEveryNumberOfDays
         {
             set { SetProperty(ref _installmentsEveryNumberOfDays, value); }
             get { return _installmentsEveryNumberOfDays; }
         }
 
+        /// <summary>
+        /// Gets or sets the number of installments.
+        /// </summary>
+        /// <value>
+        /// The number of installments.
+        /// </value>
         public int Installments
         {
             set { SetProperty(ref _installments, value); }
             get { return _installments; }
         }
 
-		[JsonProperty("force_end_of_month")]
-        public bool ForceEndOfMonth
+        /// <summary>
+        /// Gets or sets a value indicating whether installments should be forced to the end of month.
+        /// </summary>
+        /// <value>
+        ///   <c>true</c> if installments should be force to the end of month; otherwise, <c>false</c>.
+        /// </value>
+        [JsonProperty("should_force_to_end_of_month")]
+        public bool ShouldForceToEndOfMonth
         {
             set { SetProperty(ref _forceEndOfMonth, value); }
             get { return _forceEndOfMonth; }
         }
 
-		[JsonProperty("extra_days")]
+        /// <summary>
+        /// Gets or sets the extra days.
+        /// </summary>
+        /// <value>
+        /// The extra days.
+        /// </value>
+        [JsonProperty("extra_days")]
         public int ExtraDays
         {
             set { SetProperty(ref _extraDays, value); }
             get { return _extraDays; }
         }
 
-		[JsonProperty("exact_days")]
-        public bool ExactDays
+        /// <summary>
+        /// Gets or sets a value indicating whether exact days should be considered.
+        /// </summary>
+        /// <value>
+        ///   <c>true</c> if exact days should be considered; otherwise, <c>false</c>.
+        /// </value>
+        [JsonProperty("is_exact_days")]
+        public bool IsExactDays
         {
             set { SetProperty(ref _exactDays, value); }
             get { return _exactDays; }
         }
 
-		[JsonProperty("first_payment_date")]
+        /// <summary>
+        /// Gets or sets the first payment date.
+        /// </summary>
+        /// <value>
+        /// The first payment date.
+        /// </value>
+        [JsonProperty("first_payment_date")]
         public FirstPaymentDate FirstPaymentDate
         {
             set { SetProperty(ref _firstPaymentDate, value); }
             get { return _firstPaymentDate; }
         }
 
-		[JsonProperty("first_payment_option")]
+        /// <summary>
+        /// Gets or sets the first payment option.
+        /// </summary>
+        /// <value>
+        /// The first payment option.
+        /// </value>
+        [JsonProperty("first_payment_option")]
         public FirstPaymentOption FirstPaymentOption
         {
             set { SetProperty(ref _firstPaymentOption, value); }
             get { return _firstPaymentOption; }
         }
 
+        /// <summary>
+        /// Gets or sets the bank.
+        /// </summary>
+        /// <value>
+        /// The bank.
+        /// </value>
         public Bank Bank
         {
             set { SetProperty(ref _bank, value); }
             get { return _bank; }
         }
 
+        /// <summary>
+        /// Gets or sets the fee.
+        /// </summary>
+        /// <value>
+        /// The fee.
+        /// </value>
         public Fee Fee
         {
             set { SetProperty(ref _fee, value); }
             get { return _fee; }
         }
-		
-		[JsonProperty("payment_method")]
+
+        /// <summary>
+        /// Gets or sets the payment method.
+        /// </summary>
+        /// <value>
+        /// The payment method.
+        /// </value>
+        [JsonProperty("payment_method")]
         public PaymentMethod PaymentMethod
         {
             set { SetProperty(ref _paymentMethod, value); }
