@@ -1,10 +1,25 @@
 namespace Amica.Models
 {
+    /// <summary>
+    /// Payment options.
+    /// </summary>
     public enum PaymentOption
     {
-        Normal  = 1,
+        /// <summary>
+        /// Normal
+        /// </summary>
+        Normal = 1,
+        /// <summary>
+        /// VAT is included
+        /// </summary>
         VatIncluded = 2,
+        /// <summary>
+        /// VAT only
+        /// </summary>
         VatOnly = 3,
+        /// <summary>
+        /// Fees are included
+        /// </summary>
         FeesIncluded = 4
     }
 }
